--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+mekanism_version=1.18.2-10.2.0.459
+jei_version=1.18.2:9.7.0.195
